--- a/style.scss
+++ b/style.scss
@@ -4,5 +4,118 @@
 $base-font: 'Work Sans', sans-serif;
 $title-font: 'Lora', serif;
 $title-color: #7F9E56;
+$button-color: #527246;
 $main-color: #181E1A;
 $text-color: #969F9A;
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+a, ul {
+    list-style: none;
+    text-decoration: none;
+}
+
+body {
+    font-family: $base-font;
+    color: $text-color;
+}
+
+.wrapper {
+    margin: 0 80px;
+}
+
+.main-button {
+    width: 400px;
+    height: 65px;
+    border: none;
+    border-radius: 100px;
+    background-color: $button-color;
+    color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    font-family: $base-font;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+
+    &__items {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: row;
+        gap: 32px;
+        align-items: center;
+        padding: 20px 0;
+
+        &-nav {
+            display: flex;
+            flex-direction: row;
+            gap: 32px;
+        }
+
+        &-action {
+            color: #fff;
+            font-weight: 500;
+            line-height: 24px;
+        }
+
+        &-number {
+            color: #fff;
+            font-weight: 500;
+            line-height: 24px;
+        }
+
+        &-button {
+            width: 215px;
+        }
+    }
+}
+
+
+.about {
+    background-image: url(../../assets/images/main-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100vh;
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+
+        &-title {
+            font-family: $title-font;
+            font-weight: 600;
+            font-size: 57px;
+            line-height: 68px;
+            text-transform: uppercase;
+            color: $title-color;
+            border-bottom: 1px solid $text-color;
+            padding-bottom: 30px;
+        }
+
+        &-text {
+            width: 620px;
+            font-size: 18px;
+            line-height: 28px;
+            text-align: center;
+            padding-top: 30px;
+        }
+    }
+}
