changed some text, add slider and few animations

--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap');
 
 $base-font: 'Work Sans', sans-serif;
-$title-font: 'Lora', serif;
+$title-font: 'Work Sans', serif;
 $title-color: #7F9E56;
 $button-color: #527246;
 $main-color: #181E1A;
@@ -41,261 +41,15 @@ body {
     line-height: 24px;
     text-align: center;
     font-family: $base-font;
-}
+    transition: all 0.1s ease-in-out;
+    cursor: pointer;
 
-.header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: $main-color;
-
-    &__items {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    &__item {
-        display: flex;
-        flex-direction: row;
-        gap: 32px;
-        align-items: center;
-        padding: 20px 0;
-
-        &-nav {
-            display: flex;
-            flex-direction: row;
-            gap: 32px;
-        }
-
-        &-action {
-            color: #fff;
-            font-weight: 500;
-            line-height: 24px;
-        }
-
-        &-number {
-            color: #fff;
-            font-weight: 500;
-            line-height: 24px;
-        }
-
-        &-button {
-            width: 215px;
-        }
+    &:hover {
+        background-color: $title-color;
     }
 }
 
-
-.about {
-    background-image: url(../../assets/images/main-bg.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    height: 100vh;
-
-    &__content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-
-        &-title {
-            font-family: $title-font;
-            font-weight: 600;
-            font-size: 57px;
-            line-height: 68px;
-            text-transform: uppercase;
-            color: $title-color;
-            border-bottom: 1px solid $text-color;
-            padding-bottom: 30px;
-        }
-
-        &-text {
-            width: 620px;
-            font-size: 18px;
-            line-height: 28px;
-            text-align: center;
-            padding-top: 30px;
-        }
-    }
-}
-
-.complexes {
-    margin-top: 110px;
-
-    &__title {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: $title-font;
-        font-size: 60px;
-        font-weight: 600;
-        line-height: 68px;
-        color: $main-color;
-    }
-
-    &__items {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 70px;
-    }
-
-    .complex {
-
-        &__info {
-            display: flex;
-            flex-direction: row;
-            
-            &-slider {
-                background-image: url(../../assets/images/beskid-home.png);
-                width: 620px;
-                height: 620px;
-            }
-
-            &-text {
-                width: 620px;
-                height: 620px;
-                background-color: $main-color;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
-                padding: 0 36px;
-                border-radius: 0 20px 20px 0;
-                
-
-                .info__title {
-                    font-family: $title-font;
-                    color: $title-color;
-                    font-size: 32px;
-                    font-weight: 500;
-                    line-height: 40px;
-                }
-
-                .info__text {
-                    font-size: 18px;
-                    color: $text-color;
-                    font-weight: 400;
-                    line-height: 24px;
-
-                    & span {
-                        color: $title-color;
-                        font-size: 20px;
-                    }
-                }
-
-                .info__price {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: center;
-                }
-            }
-        }
-
-        .form {
-            margin-top: 45px;
-            margin-bottom: 110px;
-
-            &__container {
-                display: flex;
-                flex-direction: column;
-                
-                &-title {
-                    font-family: $title-font;
-                    color: $main-color;
-                    font-size: 32px;
-                    font-weight: 500;
-                    line-height: 40px;
-                }
-
-                &-actions {
-                    display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    justify-content: space-between;
-                    padding-top: 45px;
-
-                    .form-input {
-                        width: 405px;
-                        height: 65px;
-                        padding: 0 20px;
-                        align-items: center;
-                        border: 1px solid $text-color;
-                        border-radius: 8px;
-                        background-color: #fff;
-                        font-size: 16px;
-                        font-family: $base-font;
-                        color: $text-color;
-                        font-weight: 400;
-                        line-height: 24px;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.footer {
-    background-color: $main-color;
-    padding: 35px 0;
-
-    &__content {
-        display: flex;
-        flex-direction: column;
-
-        &-items {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            padding-bottom: 20px;
-            border-bottom: 1px solid $text-color;
-        }
-
-        .content__item {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-
-            &-title {
-                font-weight: 400;
-                font-size: 16px;
-                line-height: 24px;
-            }
-
-            &-text {
-                font-weight: 400;
-                font-size: 16px;
-                line-height: 24px;
-                color: #fff;
-            }
-
-            &-logo {
-                width: 200px;
-                height: 115px;
-            }
-        }
-    }
-
-    &__actions {
-        padding-top: 20px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
-        &-socials {
-            display: flex;
-            flex-direction: row;
-            gap: 25px;
-
-            .social-icon {
-                width: 20px;
-                height: 20px;
-            }
-        }
-    }
-}
+@import 'header';
+@import 'about';
+@import 'complexes';
+@import 'footer';
