--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -33,11 +33,17 @@ body {
   line-height: 24px;
   text-align: center;
   font-family: "Work Sans", sans-serif;
+  transition: all 0.1s ease-in-out;
+  cursor: pointer;
+}
+.main-button:hover {
+  background-color: #7F9E56;
 }
 
 .header {
   position: fixed;
   top: 0;
+  z-index: 2;
   width: 100%;
   background-color: #181E1A;
 }
@@ -51,7 +57,7 @@ body {
   flex-direction: row;
   gap: 32px;
   align-items: center;
-  padding: 20px 0;
+  padding: 10px 0;
 }
 .header__item-nav {
   display: flex;
@@ -62,14 +68,40 @@ body {
   color: #fff;
   font-weight: 500;
   line-height: 24px;
+  text-transform: uppercase;
+}
+.header__item-action::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #fff;
+  transition: width 0.3s;
+}
+.header__item-action:hover::after {
+  width: 100%;
+  transition: width 0.3s;
 }
 .header__item-number {
   color: #fff;
   font-weight: 500;
   line-height: 24px;
 }
+.header__item-number::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #fff;
+  transition: width 0.3s;
+}
+.header__item-number:hover::after {
+  width: 100%;
+  transition: width 0.3s;
+}
 .header__item-button {
-  width: 215px;
+  width: 180px;
+  height: 65px;
 }
 
 .about {
@@ -87,8 +119,8 @@ body {
   height: 100vh;
 }
 .about__content-title {
-  font-family: "Lora", serif;
-  font-weight: 600;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 700;
   font-size: 57px;
   line-height: 68px;
   text-transform: uppercase;
@@ -111,7 +143,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Lora", serif;
+  font-family: "Work Sans", sans-serif;
   font-size: 60px;
   font-weight: 600;
   line-height: 68px;
@@ -129,7 +161,6 @@ body {
   flex-direction: row;
 }
 .complexes .complex__info-slider {
-  background-image: url(../../assets/images/beskid-home.png);
   width: 620px;
   height: 620px;
 }
@@ -144,7 +175,7 @@ body {
   border-radius: 0 20px 20px 0;
 }
 .complexes .complex__info-text .info__title {
-  font-family: "Lora", serif;
+  font-family: "Work Sans", sans-serif;
   color: #7F9E56;
   font-size: 32px;
   font-weight: 500;
@@ -175,7 +206,7 @@ body {
   flex-direction: column;
 }
 .complexes .complex .form__container-title {
-  font-family: "Lora", serif;
+  font-family: "Work Sans", sans-serif;
   color: #181E1A;
   font-size: 32px;
   font-weight: 500;
@@ -201,6 +232,9 @@ body {
   color: #969F9A;
   font-weight: 400;
   line-height: 24px;
+}
+.complexes .complex .form__container-actions .form-input:hover {
+  border: 1px solid #181E1A;
 }
 
 .footer {
@@ -235,9 +269,17 @@ body {
   line-height: 24px;
   color: #fff;
 }
-.footer__content .content__item-logo {
-  width: 200px;
-  height: 115px;
+.footer__content .content__item-text::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #fff;
+  transition: width 0.3s;
+}
+.footer__content .content__item-text:hover::after {
+  width: 100%;
+  transition: width 0.3s;
 }
 .footer__actions {
   padding-top: 20px;
