--- a/about.scss
+++ b/about.scss
@@ -21,11 +21,11 @@
             color: $title-color;
             border-bottom: 1px solid $text-color;
             padding-bottom: 30px;
+            text-align: center;
         }
 
         &-text {
-            width: 620px;
-            font-size: 18px;
+            font-size: 23px;
             line-height: 28px;
             text-align: center;
             padding-top: 30px;
