--- a/complexes.scss
+++ b/complexes.scss
@@ -25,6 +25,7 @@
         &__info {
             display: flex;
             flex-direction: row;
+            justify-content: center;
             
             &-slider {
                 width: 620px;
@@ -89,28 +90,15 @@
 
                 &-actions {
                     display: flex;
+                    flex-wrap: wrap;
                     flex-direction: row;
                     align-items: center;
                     justify-content: space-between;
                     padding-top: 45px;
+                    gap: 25px;
 
-                    .form-input {
-                        width: 405px;
-                        height: 65px;
-                        padding: 0 20px;
-                        align-items: center;
-                        border: 1px solid $text-color;
-                        border-radius: 8px;
-                        background-color: #fff;
-                        font-size: 16px;
-                        font-family: $base-font;
-                        color: $text-color;
-                        font-weight: 400;
-                        line-height: 24px;
-
-                        &:hover {
-                            border: 1px solid #181E1A;
-                        }
+                    & .item {
+                        flex: 1 1 266.66px;
                     }
                 }
             }
