--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -21,6 +21,24 @@ body {
   margin: 0 80px;
 }
 
+.form-input {
+  width: 405px;
+  height: 65px;
+  padding: 0 20px;
+  align-items: center;
+  border: 1px solid #969F9A;
+  border-radius: 8px;
+  background-color: #fff;
+  font-size: 16px;
+  font-family: "Work Sans", sans-serif;
+  color: #969F9A;
+  font-weight: 400;
+  line-height: 24px;
+}
+.form-input:hover {
+  border: 1px solid #181E1A;
+}
+
 .main-button {
   width: 400px;
   height: 65px;
@@ -45,7 +63,6 @@ body {
   top: 0;
   z-index: 2;
   width: 100%;
-  padding: 10px 0;
   transition: all 0.2s ease-in-out;
 }
 .header__items {
@@ -138,10 +155,10 @@ body {
   color: #7F9E56;
   border-bottom: 1px solid #969F9A;
   padding-bottom: 30px;
+  text-align: center;
 }
 .about__content-text {
-  width: 620px;
-  font-size: 18px;
+  font-size: 23px;
   line-height: 28px;
   text-align: center;
   padding-top: 30px;
@@ -170,6 +187,7 @@ body {
 .complexes .complex__info {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 .complexes .complex__info-slider {
   width: 620px;
@@ -225,27 +243,15 @@ body {
 }
 .complexes .complex .form__container-actions {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding-top: 45px;
+  gap: 25px;
 }
-.complexes .complex .form__container-actions .form-input {
-  width: 405px;
-  height: 65px;
-  padding: 0 20px;
-  align-items: center;
-  border: 1px solid #969F9A;
-  border-radius: 8px;
-  background-color: #fff;
-  font-size: 16px;
-  font-family: "Work Sans", sans-serif;
-  color: #969F9A;
-  font-weight: 400;
-  line-height: 24px;
-}
-.complexes .complex .form__container-actions .form-input:hover {
-  border: 1px solid #181E1A;
+.complexes .complex .form__container-actions .item {
+  flex: 1 1 266.66px;
 }
 
 .footer {
@@ -260,7 +266,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
   padding-bottom: 20px;
   border-bottom: 1px solid #969F9A;
 }
@@ -308,40 +313,342 @@ body {
   height: 20px;
 }
 
-.header__burger {
+.burger {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
-  .header__burger {
-    display: block;
-    position: relative;
-    width: 30px;
-    height: 20px;
+@media screen and (max-width: 1200px) {
+  .wrapper {
+    margin: 0 16px;
   }
-  .header__burger::before, .header__burger::after {
-    content: "";
-    background-color: #fff;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    left: 0;
+  .complexes .complex__info-slider {
+    width: 500px;
+    height: 500px;
   }
-  .header__burger span {
-    position: absolute;
-    background-color: #fff;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    top: 9px;
+  .complexes .complex__info-text {
+    width: 500px;
+    height: 500px;
   }
-  .header__burger::before {
-    top: 0;
+  .complexes .complex__info-text .info__text {
+    font-size: 16px;
+    line-height: 20px;
   }
-  .header__burger::after {
-    bottom: 0;
+}
+@media screen and (max-width: 992px) {
+  .wrapper {
+    margin: 0 55px;
   }
   .header__items {
     display: none;
+  }
+  .burger {
+    display: block;
+  }
+  .burger__container {
+    margin: 0 55px;
+  }
+  .burger__menu {
+    padding-top: 35px;
+    padding-bottom: 200px;
+    background-color: #161B18;
+    position: fixed;
+    transition: transform 0.2s;
+    transform: translateX(-100%);
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  .burger__menu-title {
+    font-family: "Work Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #fff;
+  }
+  .burger__menu-actions {
+    padding-top: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+  }
+  .burger__menu-actions .burger-input {
+    width: 315px;
+    height: 50px;
+  }
+  .burger__menu-actions .burger-button {
+    width: 320px;
+    height: 50px;
+  }
+  .burger__menu-contacts {
+    padding-top: 65px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .burger__menu .contacts__container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .burger__menu .contacts__container-title {
+    font-family: "Work Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #969F9A;
+  }
+  .burger__menu .contacts__container-text {
+    font-family: "Work Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #fff;
+  }
+  .burger .showMenu {
+    transform: translateX(0);
+  }
+  .burger__items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 16px;
+  }
+  .burger__items .humburger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .burger__items-icon {
+    position: fixed;
+    left: 0;
+    padding-left: 55px;
+    cursor: pointer;
+  }
+  .burger__items .closeIcon {
+    display: none;
+  }
+  .complexes {
+    margin-top: 80px;
+  }
+  .complexes__title {
+    font-size: 32px;
+    line-height: 36px;
+    font-weight: 500;
+  }
+  .complexes__items {
+    margin-top: 50px;
+  }
+  .complexes .complex__info-slider {
+    width: 620px;
+    height: 620px;
+  }
+  .complexes .complex__info-text {
+    width: 620px;
+    height: 620px;
+  }
+  .complexes .complex__info-text .info__text {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .complex__info {
+    flex-direction: column !important;
+    align-items: center;
+  }
+  .complex__info-text {
+    border-radius: 0 0 20px 20px !important;
+  }
+  .footer__content-items {
+    gap: 30px;
+  }
+  .footer .content__item-logo {
+    width: 150px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper {
+    margin: 0 24px;
+  }
+  .complexes {
+    margin-top: 40px;
+  }
+  .complexes__title {
+    font-size: 26px;
+    line-height: 32px;
+  }
+  .complexes__items {
+    margin-top: 32px;
+  }
+  .complexes .complex__info-slider {
+    height: auto;
+  }
+  .complexes .complex__info-text {
+    height: auto;
+    padding: 16px 16px 70px 16px;
+  }
+  .complexes .complex .form__container {
+    margin: 0 16px;
+  }
+  .complexes .complex .form__container-title {
+    text-align: center;
+  }
+  .footer__content-items {
+    flex-direction: column;
+  }
+  .footer__content-items .footer__logo {
+    align-items: center;
+  }
+  .footer__content-items .footer__logo .content__item-logo {
+    width: 200px;
+    height: 120px;
+  }
+  .footer__content-items .footer__logo .content__item-title {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .footer__content-items .footer__logo .content__item-text {
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
+@media screen and (max-width: 620px) {
+  .wrapper {
+    margin: 0 16px;
+  }
+  .about__content {
+    margin: 0 16px;
+  }
+  .about__content-title {
+    font-size: 48px;
+    padding-bottom: 24px;
+    line-height: 32px;
+  }
+  .about__content-text {
+    font-size: 20px;
+    line-height: 28px;
+    padding-top: 24px;
+  }
+  .complex__info-slider {
+    max-width: 540px;
+    height: auto;
+  }
+  .complex__info-text {
+    max-width: 540px;
+    height: auto;
+    padding: 16px 16px 70px 16px;
+  }
+  .complex .form__container {
+    margin: 0 16px;
+  }
+  .complex .form__container-title {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .burger__menu {
+    padding-bottom: 0;
+    height: 100vh;
+  }
+  .burger__menu-title {
+    text-align: center;
+  }
+  .burger__menu-actions {
+    flex-direction: column;
+    padding-top: 32px;
+    gap: 32px;
+  }
+  .burger__menu-contacts {
+    padding: 32px;
+    flex-direction: column;
+    gap: 32px;
+  }
+  .burger__container {
+    margin: 0 16px;
+  }
+  .burger__items {
+    justify-content: space-between;
+  }
+  .burger__items-icon {
+    padding-left: 16px;
+  }
+  .header__items-logo {
+    width: 70px;
+    height: 40px;
+  }
+  .about__content {
+    margin: 0 16px;
+  }
+  .about__content-title {
+    font-size: 36px;
+    padding-bottom: 24px;
+    line-height: 32px;
+  }
+  .about__content-text {
+    font-size: 20px;
+    line-height: 28px;
+    padding-top: 24px;
+  }
+  .complexes {
+    margin-top: 40px;
+  }
+  .complexes__title {
+    font-size: 26px;
+    line-height: 32px;
+  }
+  .complexes__items {
+    margin-top: 32px;
+  }
+  .complexes .complex__info-slider {
+    max-width: 320px;
+    height: auto;
+  }
+  .complexes .complex__info-text {
+    max-width: 320px;
+    height: auto;
+    padding: 16px 16px 70px 16px;
+  }
+  .complexes .complex .form__container {
+    margin: 0 16px;
+  }
+  .complexes .complex .form__container-title {
+    font-size: 26px;
+    line-height: 32px;
+    text-align: center;
+  }
+  .complexes .complex .form__container-actions .form-input {
+    width: 290px;
+    height: 50px;
+  }
+  .complexes .complex .form__container-actions .form-button {
+    width: 290px;
+    height: 50px;
+  }
+  .footer__content-items {
+    flex-direction: column;
+    border: none;
+  }
+  .footer__content-items .footer__logo {
+    align-items: center;
+  }
+  .footer__content-items .footer__logo .content__item-logo {
+    width: 200px;
+    height: 120px;
+  }
+  .footer__content-items .footer__logo .content__item-title {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .footer__content-items .footer__logo .content__item-text {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .footer__actions {
+    flex-direction: column-reverse;
+    gap: 20px;
+    padding-top: 0;
+  }
+  .footer__actions-socials {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
