--- a/swiper.css
+++ b/swiper.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 100%;
   border-radius: 20px 0 0 20px;
-  
 }
 
 .swiper-slide {
@@ -22,6 +21,15 @@
 
 .swiper-pagination-bullet {
   background-color: #527246;
+}
+
+.shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(255,255,255,0) 10%, rgba(255,255,255,0) 60%, rgba(22,27,24,1) 100%);
+  top: 0;
+  left: 0;
 }
 
 @media screen and (max-width: 992px) {
