--- a/complexes.scss
+++ b/complexes.scss
@@ -61,6 +61,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-around;
+                gap: 20px;
                 padding: 0 36px;
                 border-radius: 0 20px 20px 0;
                 
@@ -84,6 +85,7 @@
                     & span {
                         color: $title-color;
                         font-size: 20px;
+                        font-weight: 500;
                     }
                 }
 
@@ -92,6 +94,45 @@
                     flex-direction: row;
                     justify-content: space-between;
                     align-items: center;
+                }
+            }
+        }
+
+        &__west-town {
+            justify-content: start;
+            padding-top: 36px;
+            gap: 20px;
+
+            .text-container {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+
+                .sizes-container {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 70px;
+                }
+            }
+
+            .info__container {
+                display: flex;
+                flex-direction: row;
+                gap: 12px;
+
+                .text-icon {
+                    min-width: 24px;
+                    min-height: 24px;
+                    width: 24px;
+                    height: 24px;
+                }                    
+
+                .info-text {
+                    font-size: 16px;
+                    color: $text-color;
+                    font-weight: 400;
+                    line-height: 24px;
+                    letter-spacing: -0.176px;
                 }
             }
         }
