--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -127,7 +127,7 @@ body {
   transition: width 0.3s;
 }
 .header__items-contacts .contacts__button {
-  width: 180px;
+  width: 215px;
   height: 65px;
 }
 
@@ -218,6 +218,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  gap: 20px;
   padding: 0 36px;
   border-radius: 0 20px 20px 0;
 }
@@ -239,12 +240,46 @@ body {
 .complexes .complex__info-text .info__text span {
   color: #7F9E56;
   font-size: 20px;
+  font-weight: 500;
 }
 .complexes .complex__info-text .info__price {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+.complexes .complex__west-town {
+  justify-content: start;
+  padding-top: 36px;
+  gap: 20px;
+}
+.complexes .complex__west-town .text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.complexes .complex__west-town .text-container .sizes-container {
+  display: flex;
+  flex-direction: row;
+  gap: 70px;
+}
+.complexes .complex__west-town .info__container {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+.complexes .complex__west-town .info__container .text-icon {
+  min-width: 24px;
+  min-height: 24px;
+  width: 24px;
+  height: 24px;
+}
+.complexes .complex__west-town .info__container .info-text {
+  font-size: 16px;
+  color: #969F9A;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -0.176px;
 }
 .complexes .complex .form {
   margin-top: 45px;
@@ -348,6 +383,7 @@ body {
   .complexes .complex__info-text {
     width: 500px;
     height: 500px;
+    gap: 6px;
   }
   .complexes .complex__info-text .info__text {
     font-size: 16px;
@@ -470,6 +506,10 @@ body {
   .complexes .complex__info-text .info__text {
     font-size: 18px;
     line-height: 24px;
+  }
+  .complexes .complex__info .sizes-container {
+    flex-direction: column !important;
+    gap: 10px !important;
   }
   .complex__info {
     flex-direction: column !important;
