--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,11 @@ a, ul {
     color: $text-color;
 }
 
+svg {
+    min-width: 24px;
+    min-height: 24px;
+}
+
 body {
     font-family: $base-font;
     color: $text-color;
