--- a/style.scss
+++ b/style.scss
@@ -72,6 +72,11 @@ body {
     }
 }
 
+.text-icon {
+    width: 24px;
+    height: 24px;
+}
+
 @import 'header';
 @import 'about';
 @import 'complexes';
