burger mobile height fix

--- a/style.scss
+++ b/style.scss
@@ -468,7 +468,7 @@ svg {
     .burger {
         &__menu {
             padding-bottom: 0;
-            height: 100vh;
+            height: 100%;
 
             &-title {
                 text-align: center;
