another burger fix

--- a/style.scss
+++ b/style.scss
@@ -467,7 +467,7 @@ svg {
 
     .burger {
         &__menu {
-            padding-bottom: 0;
+            padding-bottom: 50px;
             height: 100%;
 
             &-title {
